# live

./: .gitignore  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  LICENSE  PLAN.md  PYTHON_DESIGN.md  README.md  REFERENCE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: release.yml  test.yml
scripts/: gen_docs.py
skills/live-cmd/: SKILL.md
src/completion/: index.ts
src/live/: ansi.py  cli.py  completion.py  config.py  follow.py  format.py  lock.py  pager.py  paths.py  reader.py  recorder.py  select_session.py  session.py  state.py  sweep.py  timeutil.py  verbose.py  verbs.py  watcher.py
src/mcp/: server.ts  tools.ts
src/recorder/: index.ts
src/session/: discovery.ts  lifecycle.ts  segments.ts
src/util/: atomic.ts  lock.ts  paths.ts
test/: _helpers.ts  args.test.ts  atomic.test.ts  discovery.test.ts  lifecycle.test.ts  lineWriter.test.ts  listSessions.test.ts  meta.test.ts  recorder.test.ts  segments.test.ts
tests/: conftest.py  test_ansi.py  test_byte_cursor.py  test_completion.py  test_completion_live.py  test_config.py  test_detach.py  test_exit.py  test_follow.py  test_geometry.py  test_head.py  test_hung.py  test_llms.py  test_ls_selector.py  test_pager.py  test_partial.py  test_ps_selector.py  test_rm.py  test_rm_older_than.py  test_rotation.py  test_scaling.py  test_scope.py  test_sgr.py  test_since_time.py  test_smoke.py  test_stop.py  test_sweep.py  test_time.py  test_tty_closed.py  test_unit.py
typescript/: .npmrc  README.md  package.json
typescript/src/: args.ts  cli.ts
typescript/src/recorder/: lineWriter.ts
typescript/src/session/: meta.ts
typescript/src/util/: config.ts
typescript/test/: config.test.ts  cursor.test.ts
