[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-cmd"
version = "0.3.0"
description = "Live stream command line output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mara Kim" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
live = "live.cli:main"

[project.urls]
Homepage = "https://github.com/astralarium/live"

[tool.hatch.build.targets.wheel]
packages = ["src/live"]

[tool.pytest.ini_options]
testpaths = ["tests"]
