[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-cmd"
dynamic = ["version"]
description = "Live stream command line output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mara Kim" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
live = "live.cli:main"

[dependency-groups]
dev = ["pytest", "ruff==0.15.17"]

[project.urls]
Homepage = "https://github.com/astralarium/live"

[tool.hatch.version]
path = "src/live/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/live"]

[tool.pytest.ini_options]
testpaths = ["tests"]
